--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
+    <!-- Owl Carousel CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
   </head>
   <body
     class="bg-black text-zinc-400 antialiased selection:bg-lime-400 selection:text-black overflow-x-hidden"
@@ -362,10 +365,10 @@
         </div>
 
         <!-- Showcase Grid -->
-        <div id="showcase-slider" class="flex gap-6 overflow-x-auto no-scrollbar scroll-smooth snap-x snap-mandatory">
+        <div id="showcase-slider" class="owl-carousel owl-theme">
           <!-- Item 1 -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1534438327276-14e5300c3a48?q=80&amp;w=2940&amp;auto=format&amp;fit=crop"
@@ -397,7 +400,7 @@
 
           <!-- Item 2 -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal stagger-1 group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1576678927484-cc907957088c?q=80&amp;w=2787&amp;auto=format&amp;fit=crop"
@@ -429,7 +432,7 @@
 
           <!-- Item 3 -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal stagger-2 group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1518310383802-640c2de311b2?q=80&amp;w=2940&amp;auto=format&amp;fit=crop"
@@ -458,12 +461,11 @@
               </p>
             </div>
           </div>
-            </div>
           </div>
 
           <!-- Item 4 (New) -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal stagger-3 group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1571902943202-507ec2618e8f?q=80&w=2750&auto=format&fit=crop"
@@ -494,7 +496,7 @@
 
           <!-- Item 5 (New) -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal stagger-1 group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1599447332720-d36c39d8932f?q=80&w=2940&auto=format&fit=crop"
@@ -525,7 +527,7 @@
 
            <!-- Item 6 (New) -->
           <div
-            class="snap-center shrink-0 w-full md:w-[calc(50%-12px)] lg:w-[calc(33.333%-16px)] reveal stagger-2 group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
+            class="group relative h-[500px] rounded-xl overflow-hidden cursor-pointer"
           >
             <img
               src="https://images.unsplash.com/photo-1623874514711-0f321325f318?q=80&w=2940&auto=format&fit=crop"
@@ -957,26 +959,17 @@
             </div>
           </div>
 
-          <div class="grid grid-cols-2 lg:grid-cols-3 gap-12 text-sm font-light">
+          <div class="grid grid-cols-2 gap-12 text-sm font-light">
              <div>
                 <h4 class="text-white font-medium mb-4">Company</h4>
                 <div class="flex flex-col gap-2 text-zinc-400">
                     <a href="#" class="hover:text-lime-400 transition-colors">About Us</a>
                     <a href="#" class="hover:text-lime-400 transition-colors">Careers</a>
                     <a href="#" class="hover:text-lime-400 transition-colors">Press</a>
-                    <a href="#" class="hover:text-lime-400 transition-colors">Contact</a>
+                    <a href="#contact" class="hover:text-lime-400 transition-colors">Contact</a>
                 </div>
              </div>
              <div>
-                <h4 class="text-white font-medium mb-4">Resources</h4>
-                <div class="flex flex-col gap-2 text-zinc-400">
-                    <a href="#" class="hover:text-lime-400 transition-colors">Membership</a>
-                    <a href="#" class="hover:text-lime-400 transition-colors">Class Schedule</a>
-                    <a href="#" class="hover:text-lime-400 transition-colors">Trainers</a>
-                    <a href="#" class="hover:text-lime-400 transition-colors">Blog</a>
-                </div>
-             </div>
-             <div class="hidden lg:block">
                 <h4 class="text-white font-medium mb-4">Legal</h4>
                 <div class="flex flex-col gap-2 text-zinc-400">
                     <a href="#" class="hover:text-lime-400 transition-colors">Privacy Policy</a>
@@ -1008,6 +1001,10 @@
       </div>
     </footer>
 
+    <!-- jQuery (required for Owl Carousel) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Owl Carousel JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- Scroll Animation Script -->
     <script src="js/script.js"></script>
   </body>
