--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h1
         class="reveal stagger-1 text-6xl md:text-8xl lg:text-9xl font-semibold text-white tracking-tighter mb-8 leading-[0.9]">
         REDEFINE YOUR <br />
-        <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-zinc-600">LIMITSgit</span>
+        <span class="text-transparent bg-clip-text bg-gradient-to-b from-white to-zinc-600">LIMITS</span>
       </h1>
 
       <p class="reveal stagger-2 text-lg md:text-xl font-light text-zinc-300 max-w-2xl mx-auto mb-10 leading-relaxed">
