show case section carousl navigation arrows removed

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
   <!-- Footer -->
   <footer class="bg-black border-t border-white/5 py-12">
     <div class="max-w-7xl mx-auto px-6">
-      <div class="flex flex-col md:flex-row justify-between items-center md:items-start gap-8">
+      <div class="flex flex-col md:flex-row justify-between items-start gap-8">
         <div class="text-center md:text-left">
           <a href="#"
             class="text-white font-medium tracking-tighter text-lg flex items-center justify-center md:justify-start gap-2 mb-4">
@@ -775,14 +775,6 @@
               <a href="#" class="hover:text-lime-400 transition-colors">Careers</a>
               <a href="#" class="hover:text-lime-400 transition-colors">Press</a>
               <a href="#contact" class="hover:text-lime-400 transition-colors">Contact</a>
-            </div>
-          </div>
-          <div>
-            <h4 class="text-white font-medium mb-4">Legal</h4>
-            <div class="flex flex-col gap-2 text-zinc-400">
-              <a href="#" class="hover:text-lime-400 transition-colors">Privacy Policy</a>
-              <a href="#" class="hover:text-lime-400 transition-colors">Terms of Service</a>
-              <a href="#" class="hover:text-lime-400 transition-colors">Cookie Policy</a>
             </div>
           </div>
         </div>
